results/SVCOMP/specgen/log-ExSymExeLCMP-2024_03_07_01_29_10.txt
class Main {

    //@ requires x >= Long.MIN_VALUE && x <= Long.MAX_VALUE;
    //@ requires y >= Long.MIN_VALUE && y <= Long.MAX_VALUE;
    //@ ensures \result ==> x <= 0;
    //@ ensures !\result ==> x > 0;
    public static boolean f(long x) {
        Main inst = new Main();
        return inst.test(x, 5);
    }

    //@ requires x >= Long.MIN_VALUE && x <= Long.MAX_VALUE;
    //@ requires y >= Long.MIN_VALUE && y <= Long.MAX_VALUE;
    //@ ensures \result ==> x <= 0;
    //@ ensures !\result ==> x > 0;
    public boolean test(long x, long y) {

        long res = x;
        if (res + 1 > res + 2) {
            return false;
        } else
            System.out.println("x <=0");
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeLCMP.java:4: error: cannot find symbol
    //@ requires y >= Long.MIN_VALUE && y <= Long.MAX_VALUE;
                 ^
  symbol:   variable y
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeLCMP.java:4: error: cannot find symbol
    //@ requires y >= Long.MIN_VALUE && y <= Long.MAX_VALUE;
                                        ^
  symbol:   variable y
  location: class Main
2 errors

class Main {

    //@ requires x >= Long.MIN_VALUE && x <= Long.MAX_VALUE;
    //@ ensures \result ==> x <= 0;
    //@ ensures !\result ==> x > 0;
    public static boolean f(long x) {
        Main inst = new Main();
        return inst.test(x, 5);
    }

    //@ requires x >= Long.MIN_VALUE && x <= Long.MAX_VALUE;
    //@ requires y >= Long.MIN_VALUE && y <= Long.MAX_VALUE;
    //@ ensures \result ==> x <= 0;
    //@ ensures !\result ==> x > 0;
    public boolean test(long x, long y) {

        long res = x;
        if (res + 1 > res + 2) {
            return false;
        } else
            System.out.println("x <=0");
        return true;
    }
}
